hover accesability on mobile issue

--- a/ben_personal_site/assets/scss/header.scss
+++ b/ben_personal_site/assets/scss/header.scss
@@ -17,8 +17,10 @@
   font-weight: 600;
 }
 
-.logo a:hover {
-  letter-spacing: 2px;
+@media(hover: hover) and (pointer: fine) {
+  .logo a:hover {
+    letter-spacing: 2px;
+  }
 }
 
 .logo a {
