--- a/ben_personal_site/assets/scss/mediaqueries.scss
+++ b/ben_personal_site/assets/scss/mediaqueries.scss
@@ -189,7 +189,10 @@
     line-height: 36px;
   }
 
-  .date,
+  .date {
+    font-size: 14px;
+  }
+  
   .blurb {
     font-size: 24px;
   }
